--- a/view/styles/app.scss
+++ b/view/styles/app.scss
@@ -1,3 +1,7 @@
-p{
-  font-weight: bold;
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+body{
+  background: #484848
 }
+
+//Custom rules here
